--- a/src/app/Components/Pomodoro/Pomodoro.scss
+++ b/src/app/Components/Pomodoro/Pomodoro.scss
@@ -1,8 +1,11 @@
 .pomodoro{
+    padding: 10px;
+    padding-bottom: 20px;
+
     .pomodoro__timeLeft{
         margin-bottom: 6px;
 
-        font-size: 30px;
+        font-size: 50px;
     }
 
     .pomodoro__controls{
